# Rapidapp

./: README.md
app/: build.gradle
polished-manual-app-builder/: .eslintrc.json  .gitignore  LICENSE  Makefile  PROGRESS.md  README.md  RUNBOOK.md  SETUP_COMPLETE.md  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rapidship.config.yml  setup.sh  tsconfig.json  turbo.json  vitest.config.ts
polished-manual-app-builder/.devcontainer/: devcontainer.json
polished-manual-app-builder/.github/workflows/: ci.yml
polished-manual-app-builder/docs/: ERROR_MONITORING_README.md  ERROR_PREVENTION_GUIDE.md  ERROR_SYSTEM_INTEGRATION.md  ci.md  coverage.md  evals.md  perf.md  test-plan.md
polished-manual-app-builder/frontend/: BuildStatusBadge.tsx  ChatBox.tsx  StatusPanel.tsx  ai-orchestrator.d.ts  ai-orchestrator.js  app-generator.d.ts  app-generator.js  index.html  nohup.out  package-lock.json  package.json  server.js  template-engine.d.ts  template-engine.js  test-user-engine.js
polished-manual-app-builder/frontend/generated-apps/: .gitkeep
polished-manual-app-builder/frontend/lib/: cost-tracker.ts  sandbox.ts  utils.js
polished-manual-app-builder/generated-apps/app_1759239437220_s0i478jf5/: .env.example
polished-manual-app-builder/generated-apps/app_1759239461988_s50lrtpuo/: .eslintrc.json  .gitignore  README.md  next.config.js  package.json
polished-manual-app-builder/infra/: prometheus.yml
polished-manual-app-builder/infra/grafana-dashboards/: error-analytics-dashboard.json
polished-manual-app-builder/logs/: captured_errors.json
polished-manual-app-builder/scripts/: README.md  advanced_prompt_engineering.py  ai-debug-master-deploy.ps1  ai_debug_config.json  ai_debug_integration.py  ai_debug_system.py  ai_magic_show.py  auto_error_capture.py  benchmark.sh  build_error_capture.py  complete-demo.ps1  demo-ai-debug-features-fixed.ps1  demo-ai-debug-features.ps1  demo.ps1  demo.sh  demo_ai_features.py  demo_error_fixer.py  dev-setup.ps1  dev-setup.sh  error-learning-system.ps1  error-monitor.ps1  error_learning_engine.py  error_monitor.py  error_monitor_config.json  error_monitor_server.py  init-dbs.sql  protocol-validation-fixed.ps1  protocol-validation.ps1  spectacular_ai_demo.py  test_ai_debug.py  test_live_debugging.py  ultimate_ai_showcase.py  utils.py
polished-manual-app-builder/scripts/logs/: auto_fixes.json  demo_errors.json.backup
polished-manual-app-builder/services/collab-engine/: .env  Dockerfile  package.json  tsconfig.json
polished-manual-app-builder/services/event-store/: .env  Cargo.toml  Dockerfile  events_bench.md
polished-manual-app-builder/services/event-store/src/: config.rs  error.rs  error_capture.rs  main.rs  metrics.rs  telemetry.rs
polished-manual-app-builder/services/orchestrator/: .env  pyproject.toml  requirements.txt
polished-manual-app-builder/services/orchestrator/app/: cache.py  config.py  database.py  error_capture.py  main.py  middleware.py  models.py  telemetry.py
polished-manual-app-builder/services/orchestrator/app/routes/: health.py
polished-manual-app-builder/services/orchestrator/app/services/: model_manager.py  semantic_cache.py
polished-manual-app-builder/tests/component/: BuildStatusBadge.test.tsx  ChatBox.test.tsx  StatusPanel.test.tsx
polished-manual-app-builder/tests/e2e/: accessibility.e2e.ts  chat_create_app.e2e.ts  concurrent_projects_isolation.e2e.ts  edit_retry_regenerate.e2e.ts  offline_retry_graceful.e2e.ts
polished-manual-app-builder/tests/mocks/: RegistryMock.ts  (+4 more)
polished-manual-app-builder/vscode-extension/: package.json  tsconfig.json
zdf/: .coveragerc  .editorconfig  .gitignore  README.md  constraints.txt  mypy.ini  pyproject.toml  requirements-dev.txt  semgrep.yml
zdf/cli/: pyproject.toml
zdf/infra/: Makefile  README.md  docker-compose.yml
zdf/tests/: test_autopress.py  test_debug_bus.py
(+72 files in other folders)
